# AuTomato

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: builder.yml
include/: AuTomato.h  Context.h  Error.h  Expression.h  Interpreter.h  Lexer.h  ParseHelper.h  Parser.h  Position.h  Result.h  Statement.h  SymbolTable.h  Token.h  helper.h  stdfuncs.h  types.h
src/: Error.cc  Expression.cc  Interpreter.cc  Lexer.cc  ParseHelper.cc  Parser.cc  Position.cc  Statement.cc  SymbolTable.cc  Token.cc  shell.cc  stdfuncs.cc  types.cc
